feat: auth ready

--- a/src/login.html
+++ b/src/login.html
@@ -19,3 +19,15 @@
 </style>
 
 <div data-netlify-identity-button></div>
+
+<script>
+  function handleLogin(user) {
+    if (!user || !user.token) {
+      return;
+    }
+    window.location.pathname = '/admin/'
+  }
+
+  window.netlifyIdentity.on('init', handleLogin)
+  window.netlifyIdentity.on('login', handleLogin)
+</script>
