--- a/src/admin.html
+++ b/src/admin.html
@@ -1,8 +1,10 @@
 <style>
+  a#logout,
   h1,
   form,
   .message,
   .logout {
+    display: block;
     margin: 0 auto;
     max-width: 400px;
     width: 90vw;
@@ -60,6 +62,8 @@
   }
 </style>
 
+<a href="logout" id="logout">Log Out</a>
+
 <h1>Add a New Movie</h1>
 
 <div class="message"></div>
@@ -77,13 +81,31 @@
 </form>
 
 <script>
+  function handleIdentityEvent(user) {
+    if (user && user.token) {
+      return
+    }
+    window.location.pathname = '/login/'
+  }
+  window.netlifyIdentity.on('init', handleIdentityEvent)
+  window.netlifyIdentity.on('logout', handleIdentityEvent)
+
+  document.querySelector('#logout').addEventListener('click', (event) => {
+    event.preventDefault()
+    window.netlifyIdentity.logout();
+  })
+
   async function handleSubmit(event) {
     event.preventDefault()
 
     const data = new FormData(event.target)
+    const { access_token } = window.netlifyIdentity.currentUser().token
 
     const result = await fetch('/.netlify/functions/add-movie', {
       method: 'POST',
+      headers: {
+        Authorization: `Bearer ${access_token}`
+      },
       body: JSON.stringify({
         id: data.get('id'),
         title: data.get('title'),
